pushing from github app

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 <div class="container">
     <canvas></canvas>
-    <p class="text">Laith Bub<span>b</span>les</p>
+    <p class="text">Laith's Bub<span>b</span>les</p>
 </div>
 
 </body>
