added tiles overlay

--- a/index.html
+++ b/index.html
@@ -23,21 +23,26 @@
         ga('create', 'UA-40515102-1', 'laithnurie.me');
         ga('send', 'pageview');
     </script>
-
-
-
-    <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
-
-    <script src="js/scripts.js" type="text/javascript"></script>
+    <script src="js/bubbles.js" type="text/javascript"></script>
 </head>
 
 <body>
 
-<div class="container">
-    <canvas></canvas>
-    <p class="text">Laith's Bub<span>b</span>les</p>
-</div>
+<!--<div class="container">-->
+    <!--<canvas></canvas>-->
+    <!--<p class="text">Laith's Bub<span>b</span>les</p>-->
+<!--</div>-->
 
+
+<div id="canvas-wrap">
+    <canvas></canvas>
+    <div id="overlay">
+        <div id="android"></div>
+        <div id="cool"></div>
+        <div id="music"></div>
+        <div id="videogames"></div>
+    </div>
+</div>
 </body>
 
 
