removed tiles added pods

--- a/index.html
+++ b/index.html
@@ -28,20 +28,16 @@
 
 <body>
 
-<!--<div class="container">-->
-    <!--<canvas></canvas>-->
-    <!--<p class="text">Laith's Bub<span>b</span>les</p>-->
-<!--</div>-->
-
-
 <div id="canvas-wrap">
     <canvas></canvas>
-    <div id="overlay">
+    <div class="overlay">
         <div id="android"></div>
         <div id="cool"></div>
         <div id="music"></div>
+
         <div id="videogames"></div>
     </div>
+
 </div>
 </body>
 
