--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="description" content="">
 
     <link rel="stylesheet" href="css/laith_style.css">
+    <link rel="stylesheet" href="css/navi.css">
+    <link rel="stylesheet" href="css/social.css">
 
     <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
     <script type="text/javascript">
@@ -22,6 +24,17 @@
         })(window, document, 'script', 'http://www.google-analytics.com/analytics.js', 'ga');
         ga('create', 'UA-40515102-1', 'laithnurie.me');
         ga('send', 'pageview');
+
+        function goToByScroll(id) {
+            $('html,body').animate({scrollTop:$(id).offset().top - 100}, 'slow');
+        }
+
+        $(document).ready(function () {
+            $('.navigation a').click(function () {
+                goToByScroll($(this).attr('href'));
+                return false;
+            });
+        });
     </script>
     <script src="js/bubbles.js" type="text/javascript"></script>
 </head>
@@ -30,15 +43,59 @@
 
 <div id="canvas-wrap">
     <canvas></canvas>
-    <div class="overlay">
-        <div id="android"></div>
-        <div id="cool"></div>
-        <div id="music"></div>
+    <div class="navigation">
+        <a href="#android">
+            <div class="green">
+                <h2>Android</h2>
 
-        <div id="videogames"></div>
+                <p>Welcome to UI Punch</p>
+            </div>
+        </a>
+        <a href="#cool">
+            <div class="blue">
+                <h2>Cool</h2>
+
+                <p>Welcome to UI Punch</p>
+            </div>
+        </a>
+        <a href="#music">
+            <div class="red">
+                <h2>Home</h2>
+
+                <p>Welcome to UI Punch</p>
+            </div>
+        </a>
+        <a href="#videogames">
+            <div class="yellow">
+                <h2>Home</h2>
+
+                <p>Welcome to UI Punch</p>
+            </div>
+        </a>
+
     </div>
-
+    <div class="overlay">
+        <div id="android" class="android"></div>
+        <div id="cool" class="cool"></div>
+        <div id="music" class="music"></div>
+        <div id="videogames" class="videogames"></div>
+    </div>
+    <div id="contact-me">
+        <div id="wrapper">
+            <div class="social">
+                <ul>
+                    <li class="twitter"></li>
+                    <li class="facebook"></li>
+                    <li class="gplus"></li>
+                    <li class="dropbox"></li>
+                    <li class="github"></li>
+                    <a href="#" id="arrow"></a>
+                </ul>
+            </div>
+        </div>
+    </div>
 </div>
+
 </body>
 
 
