added tiles overlay

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     <li class="gplus"></li>
                     <li class="dropbox"></li>
                     <li class="github"></li>
-                    <a href="#" id="arrow"></a>
+                    <a  id="arrow"></a>
                 </ul>
             </div>
         </div>
