added images to social bar, readjusted background position

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<head>
+<head xmlns="http://www.w3.org/1999/html">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>Laith's Site </title>
@@ -43,37 +43,37 @@
 
 <div id="canvas-wrap">
     <canvas></canvas>
-    <div class="navigation">
-        <a href="#android">
-            <div class="green">
-                <h2>Android</h2>
+    <!--<div class="navigation">-->
+        <!--<a href="#android">-->
+            <!--<div class="green">-->
+                <!--<h2>Android</h2>-->
 
-                <p>Welcome to UI Punch</p>
-            </div>
-        </a>
-        <a href="#cool">
-            <div class="blue">
-                <h2>Cool</h2>
+                <!--<p>Welcome to UI Punch</p>-->
+            <!--</div>-->
+        <!--</a>-->
+        <!--<a href="#cool">-->
+            <!--<div class="blue">-->
+                <!--<h2>Cool</h2>-->
 
-                <p>Welcome to UI Punch</p>
-            </div>
-        </a>
-        <a href="#music">
-            <div class="red">
-                <h2>Home</h2>
+                <!--<p>Welcome to UI Punch</p>-->
+            <!--</div>-->
+        <!--</a>-->
+        <!--<a href="#music">-->
+            <!--<div class="red">-->
+                <!--<h2>Home</h2>-->
 
-                <p>Welcome to UI Punch</p>
-            </div>
-        </a>
-        <a href="#videogames">
-            <div class="yellow">
-                <h2>Home</h2>
+                <!--<p>Welcome to UI Punch</p>-->
+            <!--</div>-->
+        <!--</a>-->
+        <!--<a href="#videogames">-->
+            <!--<div class="yellow">-->
+                <!--<h2>Home</h2>-->
 
-                <p>Welcome to UI Punch</p>
-            </div>
-        </a>
+                <!--<p>Welcome to UI Punch</p>-->
+            <!--</div>-->
+        <!--</a>-->
 
-    </div>
+    <!--</div>-->
     <div class="overlay">
         <div id="android" class="android"></div>
         <div id="cool" class="cool"></div>
@@ -84,11 +84,11 @@
         <div id="wrapper">
             <div class="social">
                 <ul>
-                    <li class="twitter"></li>
-                    <li class="facebook"></li>
-                    <li class="gplus"></li>
-                    <li class="dropbox"></li>
-                    <li class="github"></li>
+                    <a href="https://twitter.com/laith_nurie"><li class="twitter"></li></a>
+                    <a href="https://facebook.com/hewhoprotects"><li class="facebook"></li></a>
+                    <a href="https://plus.google.com/u/0/107039890294603303988"><li class="gplus"></li></a>
+                    <a href="http://www.linkedin.com/profile/view?id=90195382"><li class="linkedin"></li></a>
+                    <a href="https://github.com/laithnurie"><li class="github"></li></li></a>
                     <a  id="arrow"></a>
                 </ul>
             </div>
