--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/laith_style.css">
     <link rel="stylesheet" href="css/navi.css">
     <link rel="stylesheet" href="css/social.css">
+    <link rel="stylesheet" href="css/timeline.css">
 
     <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
     <script type="text/javascript">
@@ -44,52 +45,105 @@
 <div id="canvas-wrap">
     <canvas></canvas>
     <!--<div class="navigation">-->
-        <!--<a href="#android">-->
-            <!--<div class="green">-->
-                <!--<h2>Android</h2>-->
+    <!--<a href="#android">-->
+    <!--<div class="green">-->
+    <!--<h2>Android</h2>-->
 
-                <!--<p>Welcome to UI Punch</p>-->
-            <!--</div>-->
-        <!--</a>-->
-        <!--<a href="#cool">-->
-            <!--<div class="blue">-->
-                <!--<h2>Cool</h2>-->
+    <!--<p>Welcome to UI Punch</p>-->
+    <!--</div>-->
+    <!--</a>-->
+    <!--<a href="#cool">-->
+    <!--<div class="blue">-->
+    <!--<h2>Cool</h2>-->
 
-                <!--<p>Welcome to UI Punch</p>-->
-            <!--</div>-->
-        <!--</a>-->
-        <!--<a href="#music">-->
-            <!--<div class="red">-->
-                <!--<h2>Home</h2>-->
+    <!--<p>Welcome to UI Punch</p>-->
+    <!--</div>-->
+    <!--</a>-->
+    <!--<a href="#music">-->
+    <!--<div class="red">-->
+    <!--<h2>Home</h2>-->
 
-                <!--<p>Welcome to UI Punch</p>-->
-            <!--</div>-->
-        <!--</a>-->
-        <!--<a href="#videogames">-->
-            <!--<div class="yellow">-->
-                <!--<h2>Home</h2>-->
+    <!--<p>Welcome to UI Punch</p>-->
+    <!--</div>-->
+    <!--</a>-->
+    <!--<a href="#videogames">-->
+    <!--<div class="yellow">-->
+    <!--<h2>Home</h2>-->
 
-                <!--<p>Welcome to UI Punch</p>-->
-            <!--</div>-->
-        <!--</a>-->
+    <!--<p>Welcome to UI Punch</p>-->
+    <!--</div>-->
+    <!--</a>-->
 
     <!--</div>-->
     <div class="overlay">
-        <div id="android" class="android"></div>
-        <div id="cool" class="cool"></div>
-        <div id="music" class="music"></div>
-        <div id="videogames" class="videogames"></div>
+        <div id="android" class="android">
+            <ul class="timeline">
+                <!-- Item 1 -->
+                <li>
+                    <div class="direction-r">
+                        <div class="flag-wrapper">
+                            <span class="flag">Freelancer</span>
+                            <span class="time-wrapper"><span class="time">2013 - present</span></span>
+                        </div>
+                        <div class="desc">My current employment. Way better than the position before!</div>
+                    </div>
+                </li>
+
+                <!-- Item 2 -->
+
+                <li>
+                    <div class="direction-l">
+                        <div class="flag-wrapper">
+                            <span class="flag">Apple Inc.</span>
+                            <span class="time-wrapper"><span class="time">2011 - 2013</span></span>
+                        </div>
+                        <div class="desc">My first employer. All the stuff I've learned and projects I've been working
+                            on.
+                        </div>
+                    </div>
+                </li>
+
+                <!-- Item 3 -->
+
+                <li>
+                    <div class="direction-r">
+                        <div class="flag-wrapper">
+                            <span class="flag">Harvard University</span>
+                            <span class="time-wrapper"><span class="time">2008 - 2011</span></span>
+                        </div>
+                        <div class="desc">A description of all the lectures and courses I have taken and my final
+                            degree?
+                        </div>
+                    </div>
+                </li>
+            </ul>
+        </div>
+        <!--<div id="cool" class="cool"></div>-->
+        <!--<div id="music" class="music"></div>-->
+        <!--<div id="videogames" class="videogames"></div>-->
+
+
     </div>
     <div id="contact-me">
         <div id="wrapper">
             <div class="social">
                 <ul>
-                    <a href="https://twitter.com/laith_nurie"><li class="twitter"></li></a>
-                    <a href="https://facebook.com/hewhoprotects"><li class="facebook"></li></a>
-                    <a href="https://plus.google.com/u/0/107039890294603303988"><li class="gplus"></li></a>
-                    <a href="http://www.linkedin.com/profile/view?id=90195382"><li class="linkedin"></li></a>
-                    <a href="https://github.com/laithnurie"><li class="github"></li></li></a>
-                    <a  id="arrow"></a>
+                    <a href="https://twitter.com/laith_nurie">
+                        <li class="twitter"></li>
+                    </a>
+                    <a href="https://facebook.com/hewhoprotects">
+                        <li class="facebook"></li>
+                    </a>
+                    <a href="https://plus.google.com/u/0/107039890294603303988">
+                        <li class="gplus"></li>
+                    </a>
+                    <a href="http://www.linkedin.com/profile/view?id=90195382">
+                        <li class="linkedin"></li>
+                    </a>
+                    <a href="https://github.com/laithnurie">
+                        <li class="github"></li>
+                        </li></a>
+                    <a id="arrow"></a>
                 </ul>
             </div>
         </div>
